[package]
name = "the-eye-of-nehaleni"
version = "0.1.0"
edition = "2021"
authors = ["github.com/jerryshell/the-eye-of-nehaleni"]

[dependencies]
reqwest = { version = "0.11.9", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.15.0", features = ["full"] }
tokio-test = "0.4.2"
clap = { version = "3.0.10", features = ["derive"] }
anyhow = "1.0.52"
