[package]
name = "the-eye-of-nehaleni"
version = "0.1.0"
edition = "2021"
authors = ["github.com/jerryshell/the-eye-of-nehaleni"]

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-test = "0.4.2"
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"

[profile.release]
lto = true
